.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Learning_Course__c.object
<CustomObject>
    <description>This object is migrated to learning package. Any configurations/customisation related to this object should be done in learning package</description>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Learning Courses</relationshipLabel>
        <relationshipName>Learning_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost__c</fullName>
        <label>Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_unit__c</fullName>
        <label>Per person/event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per person</fullName>
                </value>
                <value>
                    <fullName>Per event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Course_preparation__c</fullName>
        <label>Course preparation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Pre reading</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Course_qualification__c</fullName>
        <description>Qualifications available on successful completion of course</description>
        <label>Course qualification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_no_of_attendees__c</fullName>
        <label>Max no of attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Medium__c</fullName>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Home study</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Min_no_of_attendees__c</fullName>
        <label>Min no of attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_presenters__c</fullName>
        <label>Number of presenters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_training_provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other provider</label>
        <referenceTo>xcdhcm__Learning_Provider__c</referenceTo>
        <relationshipLabel>Learning Courses (Other Provider)</relationshipLabel>
        <relationshipName>Learning_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Primary_training_provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary provider</label>
        <referenceTo>xcdhcm__Learning_Provider__c</referenceTo>
        <relationshipLabel>Learning Courses (Primary Provider)</relationshipLabel>
        <relationshipName>Learning_Courses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Suitable_for__c</fullName>
        <label>Suitable for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Senior manager</fullName>
                </value>
                <value>
                    <fullName>Support staff</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compulsory</fullName>
                </value>
                <value>
                    <fullName>External conference</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Unit__c</fullName>
        <label>Hours/days/weeks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Venue__c</fullName>
        <label>Venue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Learning Course</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Primary_training_provider__c</columns>
        <columns>xcdhcm__Max_no_of_attendees__c</columns>
        <columns>xcdhcm__Suitable_for__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Learning course</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Courses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>